--- a/Vagrantfile.template
+++ b/Vagrantfile.template
@@ -10,9 +10,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   DOCKER_IMAGE_REPO = "mtbvang"
 
   # UPDATE these project specific details.
-  PROJECT_NAME = "project1"
-  FORWARDED_PORT_OFFSET = 6
-  GUEST_APP_PORT = 8080
+  PROJECT_NAME = "<replace>"
+  FORWARDED_PORT_OFFSET = <replace>
+  GUEST_APP_PORT = <replace>
   FORWARDED_HOST_APP_PORT = GUEST_APP_PORT + FORWARDED_PORT_OFFSET
 
   GUEST_MONGO_PORT = 27017
