Moved ubuntu related files to subfolders. Not tested yet.

--- a/Vagrantfile.template
+++ b/Vagrantfile.template
@@ -24,13 +24,12 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.provision "file", source: "~/.gitconfig", destination: ".gitconfig"
   config.vm.provision "file", source: "~/.ssh/config", destination: ".ssh/config"
-  config.vm.provision "file", source: "~/.ssh/founders", destination: ".ssh/founders"
-  config.vm.provision "file", source: "~/.ssh/founders.pub", destination: ".ssh/founders.pub"
+  #config.vm.provision "file", source: "~/.ssh/*", destination: ".ssh/"
   config.vm.provision "file", source: "vagrant/.bash_aliases", destination: ".bash_aliases"
   config.vm.provision "file", source: "vagrant/.bashrc", destination: ".bashrc"
 
   config.vm.provision "consul", type: "shell" do |s|
-    s.path = "vagrant/provision/consul.sh"
+    s.path = "vagrant/provision/ubuntu/consul.sh"
     s.args = ""
   end
   
