--- a/Vagrantfile.node.template
+++ b/Vagrantfile.node.template
@@ -31,7 +31,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.provision "consul", type: "shell" do |s|
     s.path = "<vagrantDir>/provisioning/shell/ubuntu/consul.sh"
-    s.args = "0.5.0 'devops/provisioning'"
+    s.args = "0.5.0 'devops/vagrant/provisioning'"
   end
   
   config.vm.define "#{PROJECT_NAME}-mongo" do |d|
